PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? Mar 2006, PHP 5.1.3RC2
- Check 2nd parameter of tempnam() against path components. (Ilia)
- Fixed Apache2 SAPIs header handler modifying header strings. (Mike)
- Allowed 'auto_globals_jit' work together with 'register_argc_argv'. (Dmitry)
- Eliminated run-time constant fetching for TRUE, FALSE and NULL. (Dmitry)
- Fixed offset/length parameter validation in substr_compare() function. (Ilia)
- Added overflow checks to wordwrap() function. (Ilia)
- Added support for BINARY_DOUBLE and BINARY_FLOAT to PDO_OCI and OCI8 
  (also fixes bug #36764). (Tony)
- Removed the E_STRICT deprecation notice from "var". (Ilia)
- Fixed debug_zval_dump() to support private and protected members. (Dmitry)
- Fixed SoapFault::getMessage(). (Dmitry)
- Fixed bug #36898 (__set() leaks in classes extending internal ones). 
  (Tony, Dmitry)
- Fixed bug #36886 (User filters can leak buckets in some situations). (Ilia)
- Fixed bug #36878 (error messages are printed even though an exception has 
  been thrown). (Tony)
- Fixed bug #36869 (memory leak in output buffering when using chunked output).
  (Tony)
- Fixed bug #36859 (DOMElement crashes when calling __construct when 
  clone'ing). (Tony)
- Fixed bug #36857 (Added support for partial content fetching to the HTTP
  streams wrapper). (Ilia)
- Fixed bug #36851 (Documentation and code discrepancies for NULL data 
  in oci_fetch_*() functions). (Tony)
- Fixed bug #36825 (Exceptions thrown in ArrayObject::offsetGet cause 
  segfault). (Tony)
- Fixed bug #36820 (Privileged connection with an Oracle password file fails). 
  (Tony)
- Fixed bug #36809 (__FILE__ behavior changed). (Dmitry)
- Fixed bug #36808 (syslog ident becomes garbage between requests). (Tony)
- Fixed bug #36802 (mysqli_set_charset() crash with a non-open connection).
  (Ilia)